// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attest() has correct payload in JWT for an attestation 1`] = `Promise {}`;

exports[`authenticate() handles response with missing challenge 1`] = `[Error: Challenge was not included in response]`;

exports[`authenticate() returns profile mixing public and private claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Davie",
  "phone": "+15555551234",
}
`;

exports[`authenticate() returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Davie",
  "phone": "+15555551234",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6IjB4MTEyMjMzIiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.y7AK2CZkCfMNM0k2WqAl7X7gg5ieBRVYa3mrI3Wfsq3JkH7mOd4J2XT_7eI5GIL2-tIVpnqMWVzCrvNwRRkzQQE",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`authenticate() returns profile with device key claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "deviceKey": "0xdeviceKey",
  "name": "Super Developer",
}
`;

exports[`authenticate() returns profile with only public claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Super Developer",
}
`;

exports[`authenticate() returns profile with private chain network id claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Super Developer",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
}
`;

exports[`authenticate() returns pushToken if available 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Super Developer",
  "pushToken": "PUSHTOKEN",
}
`;

exports[`configuration configNetworks if networks key is passed in it must contain configuration object 1`] = `"Network configuration object required"`;

exports[`configuration configNetworks should require a registry address 1`] = `"Malformed network config object, object must have 'registry' key specified."`;

exports[`configuration configNetworks should require a rpcUrl 1`] = `"Malformed network config object, object must have 'rpcUrl' key specified."`;

exports[`disclose() creates a valid JWT for a disclosure 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywib3duIjp7Im5hbWUiOiJCb2IifSwidHlwZSI6InNoYXJlUmVzcCIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.A0VSy1LzNNUr2sKSAse9M34zx4TuRBKYZ7ywtZ4yK_UdHcA9dKIzrh45kq8D0kk3Q2HPTxFr9a4t7J1vzPUK9QA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "own": Object {
      "name": "Bob",
    },
    "type": "shareResp",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`disclose() creates a valid JWT for a disclosure 2`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxIjoiZXlKMGVYQWlPaUpLVjFRaUxDSmhiR2NpT2lKRlV6STFOa3N0VWlKOS5leUpwWVhRaU9qRTBPRFV6TWpFeE16TXNJbVY0Y0NJNk1UUTROVE15TVRjek15d2lkSGx3WlNJNkluTm9ZWEpsVW1WeElpd2lhWE56SWpvaVpHbGtPbVYwYUhJNk1IaGlZek5oWlRVNVltTTNObVk0T1RRNE1qSTJNakpqWkdWbU4yRXlNREU0WkdKbE16VXpPRFF3SW4wLnB0VzdqUzVsemZjYldDZ2kzTTRNRDczZFJEVGJrZmw0djd3TV82WjhwYkJBblpRcFFZV0hVaG90Zm9Tc3ZZZHExYVFUS1ZnLURsYWNkcGJsLS10X1JnRSIsImF1ZCI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCIsInR5cGUiOiJzaGFyZVJlc3AiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.OKfpTWb1yNkw2h5ake9wHMO-lQChPtRMK29JZb3gEjcy9H5Yml-lrMRW6z-Wvnn4td9HB3As8fsVA9OJyive4wA",
  "payload": Object {
    "aud": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "req": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
    "type": "shareResp",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.cYVTTaObssUZlT68Viz_Zwo6s6lY1_AghVxCqCx-3zFL7t9m1bzqJJnVOWMgRBIX177attz_ahtAUbB9Fre4pgA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.cYVTTaObssUZlT68Viz_Zwo6s6lY1_AghVxCqCx-3zFL7t9m1bzqJJnVOWMgRBIX177attz_ahtAUbB9Fre4pgA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJ2ZXJpZmllZCI6WyJuYW1lIl0sInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.6-RDnTCbyStFDjRdG8SODqakNWqd-DOwDx-z0sefcwrlg3vDrRV8xSPenifbuhlLIRP3Km4dwCO89dqcMrnUYwA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJwZXJtaXNzaW9ucyI6WyJub3RpZmljYXRpb25zIl0sInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.90LFA1ITNFW_1We3o1vNoI333GD3mGj7Sa-8bDjk6Psw7oHhvQ5T528VB1aT3-2rlqsXGNA5Re8GXXgMqGNbwQE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywicmVxdWVzdGVkIjpbIm5hbWUiLCJwaG9uZSJdLCJjYWxsYmFjayI6Imh0dHBzOi8vbXlzZXJ2ZXIuY29tIiwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.3v3WjKyeesI0BGP5-p6Pf-jszTBJKHN9fZeTljtXE2cVokiiXxkDeCGPdqMOI372XA1a_i0cV5rGVqe3w05S6gE",
  "payload": Object {
    "callback": "https://myserver.com",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT requesting a bad accountType 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT requesting a specific accountType 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywiYWN0IjoiZGV2aWNla2V5IiwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.M7fTKA6RGZong1yAWBjw1YNo9YEn1V5oMXUJafgCIijK5KX1iHUpBwcLgkTi0wQGRSGqtVpD4pl9WP5bu8Ia5wA",
  "payload": Object {
    "act": "devicekey",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() has correct payload in JWT requesting a specific network_id 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywibmV0IjoiMHg0IiwidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.y6PI2kBsvKG9o2ni_qGHBGVhMypIYsTflvE-oj6I_kha9ughnPDEy_WbDhnNWbgI2tMo6wUh9RF-zW-y6cAeIQE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "net": "0x4",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`requestDisclosure() ignores unsupported request parameters 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`verifyProfile() returns profile mixing public and private claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Davie",
  "phone": "+15555551234",
}
`;

exports[`verifyProfile() returns profile mixing public and private claims and verified credentials 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Davie",
  "phone": "+15555551234",
  "verified": Array [
    Object {
      "claim": Object {
        "email": "bingbangbung@email.com",
      },
      "exp": 1485321134,
      "iat": 1485321133,
      "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
      "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInN1YiI6IjB4MTEyMjMzIiwiY2xhaW0iOnsiZW1haWwiOiJiaW5nYmFuZ2J1bmdAZW1haWwuY29tIn0sImV4cCI6MTQ4NTMyMTEzNCwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.y7AK2CZkCfMNM0k2WqAl7X7gg5ieBRVYa3mrI3Wfsq3JkH7mOd4J2XT_7eI5GIL2-tIVpnqMWVzCrvNwRRkzQQE",
      "sub": "0x112233",
    },
  ],
}
`;

exports[`verifyProfile() returns profile with only public claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Bob Smith",
}
`;

exports[`verifyProfile() returns profile with private chain network id claims 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Bob Smith",
  "networkAddress": "34wjsxwvduano7NFC8ujNJnFjbacgYeWA8m",
}
`;

exports[`verifyProfile() returns pushToken if available 1`] = `
Object {
  "address": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "country": "NI",
  "name": "Bob Smith",
  "pushToken": "PUSHTOKEN",
}
`;
